--- a/css/bear.css
+++ b/css/bear.css
@@ -13,6 +13,7 @@ html {
 @media only screen and (min-width: 1196px){
     #bear{
         position:relative;
-        left: 800px;        
+        left: 800px;
+        float:left;        
     }
 }
