--- a/css/bear.css
+++ b/css/bear.css
@@ -14,6 +14,7 @@ html {
     #bear{
         position:relative;
         left: 800px;
-        float:left;        
+        float:left;
+        z-index: 1;
     }
 }
