--- a/css/ostrich.css
+++ b/css/ostrich.css
@@ -12,8 +12,7 @@ html {
 
 @media only screen and (max-width: 1196px){
     #ostrich{
-        position: relative;
-        bottom: 100px;
+        top: 100px;
 
     }
 }
