--- a/css/dolphin.css
+++ b/css/dolphin.css
@@ -16,7 +16,13 @@ html {
   position: absolute;
   top: 400px;
   right: 0;
-  transform: rotate(-.25turn);
+  
 }
 
 /* Write your solution here */
+@media only screen and (min-width: 642px) and (max-width: 1090px){
+    #dolphin{
+        transform: rotate(-.25turn);
+        
+    }
+}
